# comi

./: .gitignore  .replit  Procfile  buildpackyml.txt  manage.py  pyproject.toml  replit.md  requirements  requirements.txt  setup_defaults.py  sitemap.py
accounts/: admin.py  forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py
attached_assets/: Pasted-import-os-import-json-from-pydantic-import-BaseModel-Field-from-google-import-genai-from-google-1760871655219_1760871655241.txt
comic_generator/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
generator/: admin.py  image_utils.py  models.py  tasks.py  urls.py  views.py
generator/migrations/: 0001_initial.py
templates/: base.html
templates/accounts/: login.html  profile.html  register.html
templates/generator/: dashboard.html  gallery.html  generate.html  result.html
templates/tokens/: history.html  packages.html
tokens/: admin.py  models.py  urls.py  views.py
tokens/migrations/: 0001_initial.py
