[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dashscope>=1.24.6",
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
    "google-generativeai>=0.8.5",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "stripe>=13.0.1",
    "whitenoise==6.11.0",
]
